# inquiSTR

./: .gitignore  Cargo.toml  LICENSE  README.md  Snakefile  multi_repeat_typer.sh  multi_repeat_typer.smk
.github/workflows/: publish.yml
data/: repeats_from_Chintalaphani.bed
envs/: add_sample_info.yml  combine_repeats.yml  plot_repeats.yml  repeat_typer.yml
scripts/: STR_regression.R  add_sample_info_to_all_repeats.py  combine_repeat_calls.py  count_outliers.py  multiple_hits.py  plot_repeat_length_distribution.py  plot_somatic_variation.py  repeat_typer.py  somatic_variation.py
src/: assoc.rs  call.rs  combine.rs  histogram.rs  main.rs  metadata.rs  outlier.rs  plot.rs  query.rs  repeats.rs  utils.rs
test-data/: file1.inq  file2.inq  file3.inq  test.bed
