[package]
name = "inquiSTR"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
rust-htslib = "*"
log = "0.4.0"
env_logger = "0.10.0"
bio = "*"
rayon = "1.5.3"
human-sort = "0.2.2"
flate2 = "1.0.24"
histo_fp = "0.2.1"
indicatif = {version = "0.17.1", features = ["rayon"]}
linecount = "0.1.0"
itertools = "0.11.0"
plotly = "0.8.3"
linfa-clustering = "0.6.1"
linfa = "0.6.1"
ndarray = "0.15.6"
niffler = "2.5.0"

[dev-dependencies]
ctor = "*"
