[package]
name = "inquiSTR"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rust-htslib = "*"
log = "0.4.0"
env_logger = "0.11.2"
bio = "*"
rayon = "1.5.3"
human-sort = "0.2.2"
flate2 = "1.0.24"
histo_fp = "0.2.1"
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.12.1"
plotly = "0.8.3"
linfa-clustering = "0.7.0"
linfa = "0.7.0"
ndarray = "0.15.6"
niffler = "2.5.0"
dbscan = "0.3.1"
url = "2.5.0"
hts-sys = "2.1.1"

[dev-dependencies]
ctor = "*"
